--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 buildscript {
     ext {
         compose_version = '1.0.0-beta08'
+        hilt_version = '2.36'
+        kotlinVersion = '1.5.10'
+
     }
     repositories {
         google()
@@ -9,8 +12,8 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.1.0-alpha01"
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10'
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
 
         // NOTE: Do not place your application dependencies here; they belong
